...
                        Text(selectedCountry.flag)
                        Image(systemName: "chevron.down")
                            .foregroundStyle(.gray)
                    }
                }

                TextField("Your name...", text: $text)
                    .autocorrectionDisabled()
                    .accessibilityIdentifier("text_field")

            }
            .padding()
            .clipShape(RoundedRectangle(cornerRadius: 16))
...
                    .padding()
                    .foregroundStyle(Color("ButtonLabelColor"))
                    .background(text.isEmpty ? Color.primary.opacity(0.3) : Color.primary)
                    .clipShape(RoundedRectangle(cornerRadius: 16))
            }
            .disabled(text.isEmpty)
            .accessibilityIdentifier("search_button")
        }
    }
}

#Preview {
    SearchField(
...
